conductor-tui/tests/snapshots/tui_snapshots__snap_modal_ticket_info.snap
---
source: conductor-tui/tests/tui_snapshots.rs
expression: render_to_string(&state)
---
"┌ Repos & Worktrees (0 active) ──────────────────────────────────────────────┐┌ All Workflow Runs (H: show history, V: ┐"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                       ┌ #42 Fix authentication bug ──────────────────────────────────────────┐                       │"
"│                       │                                                                      │                       │"
"│                       │  State:     [open]                                                   │                       │"
"│                       │  Source:    #42 (github)                                             │                       │"
"│                       │  Assignee:  alice                                                    │                       │"
"│                       │  Labels:    bug,auth                                                 │                       │"
"│                       │  URL:       https://github.com/user/my-app/issues/42                 │                       │"
"│                       │                                                                      │                       │"
"│                       │  Description:                                                        │                       │"
"│                       │  Users are unable to log in when session expires.                    │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │  Steps:                                                              │                       │"
"│                       │  1. Log in                                                           │                       │"
"│                       │  2. Wait 30 min                                                      │                       │"
"│                       │  3. Try to navigate                                                  │                       │"
"│                       │                                                                      │                       │"
"│                       │  o = open in browser    Esc = close                                  │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       │                                                                      │                       │"
"│                       └──────────────────────────────────────────────────────────────────────┘                       │"
"│                                                                            ││                                        │"
"│                                                                            │└────────────────────────────────────────┘"
"│                                                                            │┌ All Workflow Definitions ──────────────┐"
"│                                                                            ││                                        │"
"└────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────┘"
"[Dashboard]  Tab:panel  [/]:column  \:workflows  [S]:settings  q:quit                                                   "
