conductor-tui/tests/snapshots/tui_snapshots__snap_repo_detail.snap
---
source: conductor-tui/tests/tui_snapshots.rs
assertion_line: 239
expression: render_to_string(&state)
---
"┌ Info ──────────────────────────────────────────────────────────────────────┐┌ Workflow Runs (my-app) (H: show history┐"
"│Repo:          my-app                                                       ││                                        │"
"│Remote:        https://github.com/user/my-app                               ││                                        │"
"│Branch:        main                                                         ││                                        │"
"│Path:          /home/user/my-app                                            ││                                        │"
"│Worktrees Dir: /home/user/.conductor/workspaces/my-app                      ││                                        │"
"│Model:         (not set) (press Enter to change)                            ││                                        │"
"│Agent Issues:  Disabled (press Enter to toggle)                             ││                                        │"
"└────────────────────────────────────────────────────────────────────────────┘│                                        │"
"┌ Worktrees ─────────────────────────────────────────────────────────────────┐│                                        │"
"│feat/123-add-login                                                          ││                                        │"
"│fix/456-null-ptr                                                            ││                                        │"
"└────────────────────────────────────────────────────────────────────────────┘│                                        │"
"┌ PRs ───────────────────────────────────────────────────────────────────────┐│                                        │"
"│(loading…)                                                                  ││                                        │"
"└────────────────────────────────────────────────────────────────────────────┘│                                        │"
"┌ Tickets (hiding closed, sort: #↓) ─────────────────────────────────────────┐│                                        │"
"│⚠ No issue source configured. Press M to manage sources.                    ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"└────────────────────────────────────────────────────────────────────────────┘│                                        │"
"┌ Repo Agent ────────────────────────────────────────────────────────────────┐│                                        │"
"│No repo agent activity                                                      ││                                        │"
"└────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────┘"
"┌ Prompt ────────────────────────────────────────────────────────────────────┐┌ Workflow Definitions (my-app) ─────────┐"
"│ Type a prompt… (Enter to send, Tab/Esc to leave)                           ││                                        │"
"└────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────┘"
"[Repo Detail]  Tab:panel  [/]:column  \:workflows  [S]:settings  q:quit                                                 "
