conductor-tui/tests/snapshots/tui_snapshots__snap_tickets_view.snap
---
source: conductor-tui/tests/tui_snapshots.rs
assertion_line: 217
expression: render_to_string(&state)
---
" Conductor  Tickets                                                                                                     "
"┌ Tickets (hiding closed) [A to show all] ─────────────────────────────────────────────────────────────────────────────┐"
"│○ my-app       #123    Add login flow                 open         -                                                  │"
"│○ backend-api  #456    Fix null pointer in auth mi... open         -                                                  │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"j/k:nav  /:filter  Esc:back  ?:help                                                                                     "
