conductor-tui/tests/snapshots/tui_snapshots__snap_workflow_def_detail.snap
---
source: conductor-tui/tests/tui_snapshots.rs
assertion_line: 403
expression: render_to_string(&state)
---
"┌ Workflow Definition ───────────────────┐┌ Steps ─────────────────────────────────────────────────────────────────────┐"
"│Name        deploy-pipeline             ││  (no steps)                                                                │"
"│                                        ││                                                                            │"
"│Description                             ││                                                                            │"
"│  Deploy pipeline workflow              ││                                                                            │"
"│                                        ││                                                                            │"
"│Trigger     manual                      ││                                                                            │"
"│                                        ││                                                                            │"
"│Targets                                 ││                                                                            │"
"│  • worktree                            ││                                                                            │"
"│                                        ││                                                                            │"
"│Source      deploy-pipeline.wf          ││                                                                            │"
"│                                        ││                                                                            │"
"│Steps       0                           ││                                                                            │"
"│                                        ││                                                                            │"
"│w  run   e  edit   Esc  back            ││                                                                            │"
"│                                        ││                                                                            │"
"│                                        ││                                                                            │"
"│                                        ││                                                                            │"
"│                                        ││                                                                            │"
"│                                        ││                                                                            │"
"│                                        ││                                                                            │"
"│                                        ││                                                                            │"
"│                                        ││                                                                            │"
"│                                        ││                                                                            │"
"│                                        ││                                                                            │"
"│                                        ││                                                                            │"
"│                                        ││                                                                            │"
"│                                        ││                                                                            │"
"│                                        ││                                                                            │"
"│                                        ││                                                                            │"
"│                                        ││                                                                            │"
"│                                        ││                                                                            │"
"│                                        ││                                                                            │"
"│                                        ││                                                                            │"
"│                                        ││                                                                            │"
"│                                        ││                                                                            │"
"│                                        ││                                                                            │"
"└────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────────────┘"
"[Workflow Definition]  Tab:panel  [/]:column  \:workflows  q:quit                                                       "
