conductor-tui/tests/snapshots/tui_snapshots__snap_workflow_run_detail_ticket_targeted.snap
---
source: conductor-tui/tests/tui_snapshots.rs
expression: render_to_string(&state)
---
"┌ Info ────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Run ID:   01RUN000                                                                                                   │"
"│ Workflow: qualify-ticket-comment                                                                                     │"
"│ Status:   ⚙                                                                                                          │"
"│ Branch:   —                                                                                                          │"
"│ Path:     —                                                                                                          │"
"│ Ticket:   #2936 — Some ticket title                                                                                  │"
"│ Started:  2024-01-15 10:00:00                                                                                        │"
"│ Summary:  —                                                                                                          │"
"│ Dismiss:  [ ] No (only for terminal runs)                                                                            │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Steps (Enter=detail, Tab=switch) ────────────────────────────────────────────────────────────────────────────────────┐"
"│⚙  qualify-ticket-comment  …                                                                                          │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"[Workflow Run]  Tab:panel  [/]:column  \:workflows  [S]:settings  q:quit                                                "
