conductor-tui/tests/snapshots/tui_snapshots__snap_workflow_run_detail_with_steps.snap
---
source: conductor-tui/tests/tui_snapshots.rs
assertion_line: 384
expression: render_to_string(&state)
---
"┌ Info ────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Run ID:   01RUN000                                                                                                   │"
"│ Workflow: deploy                                                                                                     │"
"│ Status:   ⚙                                                                                                          │"
"│ Branch:   —                                                                                                          │"
"│ Path:     —                                                                                                          │"
"│ Ticket:   —                                                                                                          │"
"│ Started:  2024-01-15 10:00:00                                                                                        │"
"│ Summary:  —                                                                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Steps (Enter=detail, Tab=switch) ────────────────────────────────────────────────────────────────────────────────────┐"
"│⚙  deploy                …                                                                                            │"
"│   0. ✓  build                 [agent]  5m00s                                                                         │"
"│   1. ⚙  test                  [agent]  …                                                                             │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"[Workflow Run]  Tab:panel  [/]:column  \:workflows  q:quit                                                              "
